@@ -6,11 +6,14 @@ AUX rcc.pro 3440 RMD160 42e65efa8dc027f8a2b6c933243a91c1cac96092 SHA1 017ea0aea7
 AUX uic.pro 3671 RMD160 b6d3c392a67b66f6996134975e99db03a9987baf SHA1 f87fff37256b5c966e4d21b0fb6cb64b717f3d07 SHA256 904084b6d936fb9bab33d3592ec69dc9872708a74834f0cb498e8153f784c7fc
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
 DIST qt-mac-opensource-src-4.5.0-rc1.tar.bz2 108654601 RMD160 36c7490f9e4d55d86d875d91357c57ecd4acd8f3 SHA1 93e593b68e974ee30c7a044a7373ba2d3878def2 SHA256 e96eff94f40752da6c0eb64f91c58346a2d87a2b2f7a09155d509cb8195881bf
+DIST qt-mac-opensource-src-4.5.0.tar.bz2 111184478 RMD160 1df7c97276d89b814b867abc3d53a9423f720181 SHA1 a9704ccc501e66360015f33d97e939d5e2ab7c81 SHA256 baccbfa5c55da9a1f97192ec643b63f7e8afc2d51eab5f954617efd321fab947
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f55863543fcd4dd3a8105864ec1 SHA1 1dffebc52543ee8dd486ec69fc51d02e216323bd SHA256 94aa6268662a24cec1a20e2fb88fcac418101719c0e1ab2729289fd8b7d475d7
+DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 EBUILD qt-core-4.4.2-r2.ebuild 5498 RMD160 4e7132af307befb1acd9d415614306c79796009c SHA1 6f397a0efa53e7305010a74885ce2c80d395c12f SHA256 77f37d618bedaaa49cb91bac40bcc1c6d3ba1e6fc0f0edd876aa20e117867937
 EBUILD qt-core-4.4.2.ebuild 5224 RMD160 582802ec58bdcddd254ef13bfcd4ea44f1abcaf2 SHA1 82bc1195c01add910b03cec12043db7aa58e4571 SHA256 6d0ca4c9416f77615f507e516207d756680b288f072ea52b192bc1f181861f65
+EBUILD qt-core-4.5.0.ebuild 6043 RMD160 236a369973fad9e3993d6e08d1d4c2b2746f5e9c SHA1 a97e4836b6d44d52e29b9ce95c160306f5363989 SHA256 faae7436f77b5e5d05724fe0c7bee16608de8e6b7285cd8465a82a1dc97752a6
 EBUILD qt-core-4.5.0_rc1.ebuild 6078 RMD160 26b5b4e3936382b11ccb9d489a2f3bcae27eb045 SHA1 4044658adb95b4b3c7a8311014c02f1bff62e9b3 SHA256 23e9abac6c6c45be6cd41b53e7894cf9859c5fa79bf0af0610ebe04431ab042e
-MISC ChangeLog 4973 RMD160 676a87b5820cea33688b68e0722c94af8f0d5610 SHA1 7c8d480d82ddaff3b782438f02d35fe715012179 SHA256 4128ded5a7b00692e9d896fcabf9183cde9d43005f0ed2cea74c3f43bb03b530
+MISC ChangeLog 5088 RMD160 fb7fea1e0cd46771b579b7bdb8d8884f45f032fe SHA1 bf6131b827097890ac65ba761420a8a20858609d SHA256 e91b1c145c09530a2fc79822eb749d87595011220a97e55553ebef596aa0b378
 MISC metadata.xml 405 RMD160 7ad4cec9a392e8164062dae2935e2c59ba52b503 SHA1 104a2a88f1cf174e9e4827b639a73d79bd0fba2d SHA256 cce5d387ade0a1412bf70c58c7b0ab28fd488cc60e458ac66296ee632d893bf8
